--- a/inst/qmd/main_1.qmd
+++ b/inst/qmd/main_1.qmd
@@ -8,11 +8,16 @@ title: "my-website"
   + branch will bypass the Jekyll build process
   + and deploy the content directly
   + e.g. if GitHub Actions is unavailable/disabled
++ https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site#about-publishing-sources
+  + "if not dedicated branch to hold compiled static files
+  + source folder = 
+    + root of the repository (/) on the source branch or 
+    + => write GH Actions workflow to publish site."
+    + /docs folder on the source branch.
 
 ## Website 
-
-+ quarto render --output-dir my_custom_dir
-  + quarto render --output-dir docs
++ quarto publish 
++ quarto render --output-dir docs
 + _site - default rendered website 
     + **FAILS: GH Pages from /docs to /_site**
     + preview the website locally
